# phosphonetworks

./: .gitignore  README.md  analysis_tutorial.ipynb  paper_pipeline.ipynb  pyproject.toml
.github/workflows/: package-install.yml  paper-pipeline.yml
src/phosphonetworks/: __init__.py  config.py  kinsub.py  methods.py  netgt.py  network_methods.py  phosphodata.py  pipelines.py  utils.py  viz.py
tests/: test_paper_pipeline.py
