[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phosphonetworks"
version = "0.1.0"
description = "Package for the analysis and evaluation of signaling pathway inference from phosphoproteomics and kinase-substrate interactions"
requires-python = ">=3.8"
dependencies = [
    "biopython==1.85",
    "ipython==8.37.0",
    "decoupler==1.8.0",
    "matplotlib==3.10.3",
    "mizani==0.14.2",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "pandas==2.3.0",
    "plotnine==0.15.0",
    "requests==2.32.4",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "tqdm==4.67.1",
    "pygraphviz==1.14",
    "cvxpy==1.6.6",
    "anndata==0.11.4",
    "openpyxl==3.1.5",
    "gurobipy==12.0.3",
    "pygraphviz"
]
